Header, translations and cleaning
- Header creation
- Translation update
- Delete unnecessary files

--- a/frontend/public/locales/fi-FI/translations.json
+++ b/frontend/public/locales/fi-FI/translations.json
@@ -1,5 +1,8 @@
 {
   "app-title": "Terveysvalmentaja-sovellus",
+  "sign-up": "Rekisteröidy",
+  "login": "Kirjaudu",
+  "health-checks": "Terveystarkastukset",
   "app-description": "Luonut Haitech",
   "age": "Ikä",
   "height": "Pituus (cm)",
