Update result, consent and footer pages

--- a/frontend/public/locales/en-GB/translations.json
+++ b/frontend/public/locales/en-GB/translations.json
@@ -28,6 +28,7 @@
   "recommendation-high-risk": "You have a high health risk. Strongly recommend lifestyle changes and medical consultation.",
   "recommendation-moderate-risk": "Consider improving exercise habits and stress management.",
   "recommendation-low-risk": "Keep up the good work maintaining a healthy lifestyle.",
+  "recommendation": "Recommendation",
   "your-health-checks": "Your Health Checks",
   "no-health-checks": "You have not completed any health checks yet.",
   "date": "Date",
@@ -37,5 +38,23 @@
   "welcome-description": "This tool helps assess your lifestyle health risks and offers personalized recommendations.",
   "start-health-check": "Start Health Check",
   "health-check-title": "Complete Your Health Check",
-  "submit-success": "Health check is saved"
+  "submit-success": "Health check is saved",
+  "risk-score": "Risk score",
+  "delete": "Delete",
+  "consent-page": "Consent & Data Policy",
+  "consent-page-title": "Privacy and Consent",
+  "consent-intro": "Your privacy is important to us. This page explains how we collect and use your data.",
+  "consent-personal-data": "We collect personal data such as your health check inputs to provide personalized recommendations.",
+  "consent-cookie-policy": "We use cookies to improve your experience. You can control cookie settings in your browser.",
+  "consent-rights": "You have the right to access, modify, or delete your data at any time by contacting us.",
+  "consent-contact": "If you have questions or concerns, please contact us at privacy@example.com.",
+  "back-to-home": "Back to Home",
+  "loading": "Loading...",
+  "your-results": "Your Results",
+  "back": "Back",
+  "view-details": "View Details",
+  "health-check-result": "Health Check Result",
+  "bmi": "BMI",
+  "not-available": "N/A",
+  "failed-to-load-check": "Failed to load health check data"
 }
