--- a/frontend/public/locales/fi-FI/translations.json
+++ b/frontend/public/locales/fi-FI/translations.json
@@ -28,6 +28,7 @@
   "recommendation-high-risk": "Sinulla on korkea terveysriski. Suosittelemme vahvasti elämäntapamuutoksia ja lääkärin konsultointia.",
   "recommendation-moderate-risk": "Harkitse liikuntatottumusten ja stressinhallinnan parantamista.",
   "recommendation-low-risk": "Jatka hyvää työtä terveellisten elämäntapojen ylläpitämisessä.",
+  "recommendation": "Suositus",
   "your-health-checks": "Terveystarkastuksesi",
   "no-health-checks": "Et ole vielä tehnyt yhtään terveystarkastusta.",
   "date": "Päivämäärä",
@@ -37,5 +38,23 @@
   "welcome-description": "Tämä työkalu arvioi elämäntapatottumustesi terveysriskit ja antaa henkilökohtaisia suosituksia.",
   "start-health-check": "Aloita terveystarkastus",
   "health-check-title": "Täytä terveystarkastus",
-  "submit-success": "Terveystarkastus on tallennettu"
+  "submit-success": "Terveystarkastus on tallennettu",
+  "risk-score": "Riskitaso",
+  "delete": "Poista",
+  "consent-page": "Suostumus ja tietojenkäsittely",
+  "consent-page-title": "Yksityisyys ja suostumus",
+  "consent-intro": "Yksityisyytesi on meille tärkeää. Tällä sivulla selitetään, miten keräämme ja käytämme tietojasi.",
+  "consent-personal-data": "Keräämme henkilötietoja, kuten terveystarkastustietojasi, tarjotaksemme henkilökohtaisia suosituksia.",
+  "consent-cookie-policy": "Käytämme evästeitä parantaaksemme käyttökokemustasi. Voit hallita evästeasetuksia selaimessasi.",
+  "consent-rights": "Sinulla on oikeus tarkastella, muokata tai poistaa tietojasi milloin tahansa ottamalla meihin yhteyttä.",
+  "consent-contact": "Jos sinulla on kysymyksiä tai huolenaiheita, ota yhteyttä osoitteeseen privacy@example.com.",
+  "back-to-home": "Takaisin etusivulle",
+  "loading": "Lataa...",
+  "your-results": "Tuloksesi",
+  "back": "Takaisin",
+  "view-details": "Katso tiedot",
+  "health-check-result": "Terveystarkastuksen tulos",
+  "bmi": "BMI",
+  "not-available": "Ei saatavilla",
+  "failed-to-load-check": "Terveystarkastustietojen lataaminen epäonnistui"
 }
